[package]
name = "prc_to_xml"
version = "0.1.0"
authors = ["techyCoder81"]
edition = "2018"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
prcx = { git = "https://github.com/blu-dev/prcx", branch = "xml-style" }
prc-rs = { version = "1.3", feature = "xml" }
walkdir = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
